# pybites-alarm

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-app.yml
alarm/: __init__.py  __main__.py  alarm.py  audio.py  cli.py  constants.py  exceptions.py  files.py  utils.py
tests/: constants.py  helpers.py  test_alarm.py  test_cli.py  test_main.py
