[tool.poetry]
name = "alarm"
version = "0.2.0"
description = ""
authors = ["PyBites <support@pybit.es>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
playsound = "^1.2"
pyobjc = "^7.2"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
mypy = "^0.910"
black = {version = "^20.8b1", allow-prereleases = true}
pre-commit = "^2.15.0"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
alarm = "alarm.alarm:main"
