[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pybites-alarm"
authors = [{name = "PyBites", email = "support@pybit.es"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "playsound >=1.3.0",
    "pyobjc >=7.3",
    "python-dotenv >=0.19.0",
]

[tool.flit.module]
name = "alarm"

[project.optional-dependencies]
test = [
    "pytest",
    "flake8",
    "mypy",
]

[project.urls]
Source = "https://github.com/PyBites-Open-Source/pybites-alarm"

[project.scripts]
alarm = "alarm.alarm:main"
